--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 * * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update_data:
     runs-on: ubuntu-latest
