--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -3,7 +3,7 @@ name: Update JSON Data
 on:
   schedule:
     # Запуск каждый час
-    - cron: '0 * * * *'
+    - cron: '0 0,4,8,12,16,20 * * *'
   workflow_dispatch:
 
 permissions:
@@ -47,5 +47,5 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add ./data/destroyed_freighters.json
-          git commit -m "Automated JSON data update [skip ci]"
+          git commit -m "Automated JSON data update"
           git push
