--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -6,6 +6,13 @@ on:
   push:
     branches:
       - main
+      
+  workflow_run:
+    workflows: ["Update JSON Data"] 
+    types:
+      - completed
+    branches: 
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
